rough skeleton html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-index.html
+<!DOCTYPE html>
+<head>
+  <title>Bookstore</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/meyer-reset.css">
+ 
+ </head>
+<body>
+
+  <header>
+
+  </header>
+  
+  <main>
+
+
+  </main>
+  
+  <footer>
+    <p></p>
+  </footer>
+
+</body>
+</html>
