--- a/frontend.html
+++ b/frontend.html
@@ -7,6 +7,11 @@
   </head>
 
   <body>
+    <script>
+
+    // Lets declare the function
+    function showBooks(str) {
+    </script>
   </body>
 
 
