What to show when no book is selected (original view)

--- a/frontend.html
+++ b/frontend.html
@@ -11,6 +11,12 @@
 
     // Lets declare the function
     function showBooks(str) {
+      // This is what the page will show when no book is selected
+      if (str=="") {
+    document.getElementById("txtTips").innerHTML="";
+    return;
+
+    }
     </script>
   </body>
 
