more on the function

--- a/frontend.html
+++ b/frontend.html
@@ -15,8 +15,15 @@
       if (str=="") {
     document.getElementById("txtTips").innerHTML="";
     return;
-
     }
+    if (window.XMLHttpRequest) {
+    xmlhttp=new XMLHttpRequest();
+  }
+  xmlhttp.onreadystatechange=function() {
+    if (xmlhttp.readyState==4 && xmlhttp.status==200) {
+      document.getElementById("txtTips").innerHTML=xmlhttp.responseText;
+    }
+  }
     </script>
   </body>
 
