Function to call GetBook.php

--- a/frontend.html
+++ b/frontend.html
@@ -24,6 +24,9 @@
       document.getElementById("txtTips").innerHTML=xmlhttp.responseText;
     }
   }
+  xmlhttp.open("GET","getbook.php?q="+str,true);
+  xmlhttp.send();
+}
     </script>
   </body>
 
