Finishing up script

--- a/frontend.html
+++ b/frontend.html
@@ -4,30 +4,32 @@
   <head>
   <title>The Bookstore - Group 3</title>
   <meta charset="UTF-8">
+
+  <script>
+  // Lets declare the function
+  function showBooks(str) {
+    // This is what the page will show when no book is selected
+    if (str=="") {
+  document.getElementById("txtTips").innerHTML="";
+  return;
+  }
+  if (window.XMLHttpRequest) {
+  xmlhttp=new XMLHttpRequest();
+}
+xmlhttp.onreadystatechange=function() {
+  if (xmlhttp.readyState==4 && xmlhttp.status==200) {
+    document.getElementById("txtTips").innerHTML=xmlhttp.responseText;
+  }
+}
+// Pull data from getbook.php
+xmlhttp.open("GET","getbook.php?q="+str,true);
+xmlhttp.send();
+}
+  </script>
   </head>
 
   <body>
-    <script>
 
-    // Lets declare the function
-    function showBooks(str) {
-      // This is what the page will show when no book is selected
-      if (str=="") {
-    document.getElementById("txtTips").innerHTML="";
-    return;
-    }
-    if (window.XMLHttpRequest) {
-    xmlhttp=new XMLHttpRequest();
-  }
-  xmlhttp.onreadystatechange=function() {
-    if (xmlhttp.readyState==4 && xmlhttp.status==200) {
-      document.getElementById("txtTips").innerHTML=xmlhttp.responseText;
-    }
-  }
-  xmlhttp.open("GET","getbook.php?q="+str,true);
-  xmlhttp.send();
-}
-    </script>
   </body>
 
 
