Glömde txt.Tips

--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,9 @@ function showBooks(str) {
 <option value="1">Harpan och Svärdet</option>
 </select>
 </form>
+<br>
+<div id="txtTips"><b>Välj en bok från listan.</b></div>
+
   </body>
 
 
