--- a/frontend.html
+++ b/frontend.html
@@ -35,7 +35,7 @@ function showBooks(str) {
     <form>
 <select name="books" onchange="showBooks(this.value)">
 <option value="">Select a book:</option>
-<option value="1">Harpan och Svärdet</option>
+<option value="1">9100451924</option>
 </select>
 </form>
 <br>
