--- a/frontend.html
+++ b/frontend.html
@@ -33,13 +33,13 @@ $(document).ready(function(){
        $('#bookstable').append('<td>'+data.isbn+'</td>');
        $('#bookstable').append('<td>'+data.current_stock+'</td>');
        $('#bookstable').append('<td>'+data.author_first_name+'</td>');
-       $('#bookstable').append('<td>'+author_last_name+'</td>');
-       $('#bookstable').append('<td>'+description+'</td>');
+       $('#bookstable').append('<td>'+data.author_last_name+'</td>');
+       $('#bookstable').append('<td>'+data.description+'</td>');
        $('#bookstable').append('</tr>');
     });
 });
                });
-            });
+
 
 </script>
   </body>
