Added Meyer reset and Main.css

--- a/frontend.html
+++ b/frontend.html
@@ -5,7 +5,9 @@
   <title>The Bookstore - Group 3</title>
   <meta charset="UTF-8">
   <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-
+  <link rel="stylesheet" href="css/meyer-reset.css">
+  <!-- main.css-->
+  <link rel="stylesheet" href="css/main.css">
   </head>
 
   <body>
