--- a/frontend.html
+++ b/frontend.html
@@ -3,7 +3,7 @@
 <html>
   <head>
   <title>The Bookstore - Group 3</title>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <link rel="stylesheet" href="css/meyer-reset.css">
   <!-- main.css-->
