--- a/frontend.html
+++ b/frontend.html
@@ -12,16 +12,16 @@
 
   <body>
     <table>
-  <caption>Books in Store</caption>
+  <h3>Böcker som finns i butik</h3>
   <thead>
    <tr>
     <th>ISBN</th>
-    <th>Title</th>
-    <th>Author: First Name</th>
-    <th>Author: Last Name</th>
-    <th>Description</th>
-    <th>Current Stock</th>
-    <th>Price</th>
+    <th>Titel</th>
+    <th>Författare: Namn</th>
+    <th>Efternamn</th>
+    <th>Kort beskrivning</th>
+    <th>För tillfället i lager</th>
+    <th>Pris</th>
    </tr>
   </thead>
   <tbody id="bookstable">
