--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>The Bookstore - Group 3</title>
   <meta charset="utf-8">
   <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <link rel="stylesheet" href="css/meyer-reset.css">
+  <link rel="stylesheet" href="admin/css/meyer-reset.css">
   <!-- main.css-->
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="admin/css/main.css">
   </head>
 
   <body>
